# tokenify

./: LICENSE  README.md  requirements.txt  setup.cfg
src/: cli.py  comment_stripper.py  config.py  file_processor.py  file_writer.py  main.py  path_resolver.py
src/tokenify/: comment_stripper.py  main.py  path_resolver.py
tests/: test_cli.py  test_comment_stripper.py  test_config.py  test_file_processor.py  test_file_writer.py  test_main.py  test_path_resolver.py
