[metadata]
name = tokenify
version = 0.1.0
author = Your Name
author_email = you@example.com
description = Strip unnecessary comments (and optionally compress) from Python files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/catalinmoiceanu/tokenify
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    # none

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tokenify = src.main:main
