[metadata]
name = tokenify
version = 1.0.0
author = Catalin Moiceanu
author_email = catalin_moiceanu@yahoo.com
description = Strip unnecessary comments (and optionally compress) from Python files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/catalinmoiceanu/tokenify
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.7

[options.entry_points]
console_scripts =
    tokenify = tokenify.main:main

[options.packages.find]
where=src